src/test/ui/generics/generic-impl-more-params-with-defaults.stderr
error[E0107]: this struct takes at most 2 type arguments but 3 type arguments were supplied
  --> $DIR/generic-impl-more-params-with-defaults.rs:13:5
   |
LL |     Vec::<isize, Heap, bool>::new();
   |     ^^^              ------ help: remove this type argument
   |     |
   |     expected at most 2 type arguments
   |
note: struct defined here, with at most 2 type parameters: `T`, `A`
  --> $DIR/generic-impl-more-params-with-defaults.rs:5:8
   |
LL | struct Vec<T, A = Heap>(
   |        ^^^ -  -

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
